--- a/src/com/datmt/ocp17/exception_handling/ExceptionHandling.adoc
+++ b/src/com/datmt/ocp17/exception_handling/ExceptionHandling.adoc
@@ -3,27 +3,27 @@
 == The Throwable family
 
 - Throwable
-  - Error
-  - Exception
-    - RuntimeException
-    - IOException
-    - SQLException
-    - ...
+- Error
+- Exception
+- RuntimeException
+- IOException
+- SQLException
+- ...
 
 == Checked vs. unchecked exceptions
 
 - Checked exceptions
-  - Must be handled or declared
-  - Usually indicates a problem outside of the program
-  - Subclasses of `Exception` that are not `RuntimeException`
+- Must be handled or declared
+- Usually indicates a problem outside of the program
+- Subclasses of `Exception` that are not `RuntimeException`
 
 - Unchecked exceptions
-    - Do not have to be handled or declared
-    - Usually indicates a problem inside of the program
-    - Subclasses of `RuntimeException` or `Error`
-
+- Do not have to be handled or declared
+- Usually indicates a problem inside of the program
+- Subclasses of `RuntimeException` or `Error`
 
 == Overriding methods with declared exceptions
+
 - The exception declared in an overriding method cannot be more general than the exception declared in the overridden method
 - The overriding method can declare no exceptions even if the overridden method declares exceptions
 
@@ -49,3 +49,196 @@ class B extends A {
     void foo() throws IOException {}
 }
 ----
+
+- If the overridden method does not declare any exceptions, the overriding method cannot declare any checked exceptions
+- Example
+
+[source,java]
+----
+class A {
+    void foo() {}
+}
+
+class B extends A {
+    void foo() throws IOException {} // This will not compile
+}
+----
+
+- If the overridden method declares a checked exception but the overriding method doesn't throw any, it's not necessary to handle the exception in the overriding method
+
+- Example
+
+[source,java]
+----
+    class A {
+        public void method() throws Exception {
+            throw new Exception("Hello World");
+        }
+    }
+
+    class B extends A {
+        @Override
+        public void method() {
+            throw new RuntimeException("Hello World");
+        }
+    }
+
+    public void test() {
+        A a = new B();
+//        a.method(); //## This will not compile
+
+        B b = new B();
+        b.method(); // ## This will compile
+    }
+
+----
+
+== RuntimeException
+- RuntimeException is the superclass of all exceptions that can be thrown during the normal operation of the Java Virtual Machine
+- A method is not required to declare in its throws clause any subclasses of RuntimeException that might be thrown during the execution of the method but not caught
+- Common subclasses of RuntimeException
+    - ArithmeticException
+        * Thrown when an exceptional arithmetic condition has occurred. For example, an integer "divide by zero" throws an instance of this class
+    - ArrayIndexOutOfBoundsException
+        * Thrown to indicate that an array has been accessed with an illegal index. The index is either negative or greater than or equal to the size of the array.
+    - ClassCastException
+        * Thrown to indicate that the code has attempted to cast an object to a subclass of which it is not an instance. For example, the following code generates a ClassCastException:
+
+[source,java]
+----
+Object invalidInteger = "Hello World";
+Integer x = (Integer) invalidInteger;
+----
+
+
+    - IllegalArgumentException
+        * Thrown to indicate that a method has been passed an illegal or inappropriate argument.
+    - NullPointerException
+        * Thrown when an application attempts to use null in a case where an object is required. These include:
+            - Calling the instance method of a null object.
+            - Accessing or modifying the field of a null object.
+            - Taking the length of null as if it were an array.
+            - Accessing or modifying the slots of null as if it were an array.
+            - Throwing null as if it were a Throwable value.
+    - NumberFormatException
+        * Thrown to indicate that the application has attempted to convert a string to one of the numeric types, but that the string does not have the appropriate format.
+    - SecurityException
+        * Thrown by the security manager to indicate a security violation.
+
+- Example
+
+[source,java]
+----
+// The following code will compile but will throw an exception at runtime
+public class RuntimeExceptionExample {
+    public static void main(String[] args) {
+        int a = 10;
+        int b = 0;
+        int c = a / b; // ArithmeticException
+        System.out.println(c);
+    }
+}
+----
+
+
+== Checked exceptions
+- Checked exceptions are the exceptions that are checked at compile time
+- If some code within a method throws a checked exception, then the method must either handle the exception or it must specify the exception using throws keyword
+- Example
+    * FileNotFoundException
+    * IOException
+    * ClassNotFoundException
+    * CloneNotSupportedException
+    * SQLException
+    * NotSerializableException
+
+
+== Error
+- An Error is a subclass of Throwable that indicates serious problems that a reasonable application should not try to catch
+- Most such errors are abnormal conditions
+- Example
+    * ExceptionInInitializerError
+    * StackOverflowError
+    * NoClassDefFoundError
+    * OutOfMemoryError
+    * AssertionError
+
+
+== Exception handling
+- The try block contains set of statements where an exception can occur
+- A try block is always followed by a catch block, which handles the exception that occurs in associated try block
+- A try block must be followed by catch blocks or finally block or both
+- It is not possible to have catch or finally block without a try block
+- Example
+[source,java]
+----
+public class ExceptionHandlingExample {
+    public static void main(String[] args) {
+        try {
+            int a = 10;
+            int b = 0;
+            int c = a / b; // ArithmeticException
+            System.out.println(c);
+        } catch (ArithmeticException e) {
+            System.out.println("ArithmeticException occurred");
+        }
+    }
+}
+----
+
+=== Chaining catch blocks
+- A try block can be followed by multiple catch blocks
+- The catch block that gets executed is the one that corresponds to the exception thrown by the try block
+- Example
+[source,java]
+----
+public class ExceptionHandlingExample {
+    public static void main(String[] args) {
+        try {
+            int a = 10;
+            int b = 0;
+            int c = a / b; // ArithmeticException
+            System.out.println(c);
+        } catch (ArithmeticException e) {
+            System.out.println("ArithmeticException occurred");
+        } catch (Exception e) {
+            System.out.println("Exception occurred");
+        }
+    }
+}
+----
+In this example, only the first catch block will be executed since the exception thrown by the try block is ArithmeticException
+- When chaining catch blocks, the catch block for the subclass must come before the catch block for the superclass
+- If one of the catch block is not reachable, the compiler will complain
+
+
+=== Multicatch block
+- A multicatch block is a catch block that handles more than one type of exception
+- Example
+[source,java]
+----
+public class ExceptionHandlingExample {
+    public static void main(String[] args) {
+        try {
+            int a = 10;
+            int b = 0;
+            int c = a / b; // ArithmeticException
+            System.out.println(c);
+        } catch (ArithmeticException | NullPointerException e) {
+            System.out.println("ArithmeticException or NullPointerException occurred");
+        } catch (Exception e) {
+            System.out.println("Exception occurred");
+        }
+    }
+}
+----
+- The exceptions in a multicatch block must not be in the same inheritance hierarchy
+
+=== The finally block
+- The finally block always executes when the try block exits
+- This ensures that the finally block is executed even if an unexpected exception occurs
+- But finally is useful for more than just exception handling — it allows the programmer to avoid having cleanup code accidentally bypassed by a return, continue, or break
+- Putting cleanup code in a finally block is always a good practice, even when no exceptions are anticipated
+- When having the finally block, the catch block is optional
+- If there are return statements in the try block, the catch block and the finally block, the return statement in the finally block will be executed just before the method returns
+- The finally block will not be executed if the JVM exits while the try or catch block is being executed (e.g. System.exit() is called)
